docs: :memo: Update  text

--- a/2025AA05584.ipynb
+++ b/2025AA05584.ipynb
@@ -1519,7 +1519,7 @@
         "| Logistic Regression | Provided strong overall performance with high recall and AUC. Balanced and interpretable model.  |\n",
         "| Decision Tree       | Good recall but lower overall stability. Shows signs of overfitting compared to ensemble models. |\n",
         "| KNN                 | Moderate performance. Sensitive to feature scaling and dataset size.                             |\n",
-        "| Naive Bayes         | Comparatively lower performance due to independence assumptions.                                 |\n",
+        "| Naive Bayes         | Naive Bayes showed comparatively lower performance than other models                                 |\n",
         "| Random Forest       | Strong ensemble performance with improved stability and higher AUC.                              |\n",
         "| XGBoost             | High performance with strong recall and AUC. Boosting improves classification robustness.        |\n"
       ],
